Fix border and logo on mobile

--- a/_assets/sass/_layout.sass
+++ b/_assets/sass/_layout.sass
@@ -1,6 +1,8 @@
 body
+  border: #{$baseline / 2} solid $color-white
+
   @media (min-width: 36em)
-    border: $baseline solid $color-white
+    border-width: $baseline
 
 .page
   padding: #{$baseline * 2} $baseline
